# dsider

./: README.md  _typos.toml  main.py  pyproject.toml
src/dsider/: __init__.py  __main__.py  copier_runner.py  template_registry.py
src/dsider/cli/: main.py
src/dsider/cli/commands/: list_templates.py  new.py  update.py
src/dsider/templates/copier/base/: copier.yml
src/dsider/templates/copier/base/{{project_name}}/data/: README.md
src/dsider/templates/copier/base/{{project_name}}/references/: README.md
src/dsider/templates/copier/base/{{project_name}}/src/{{project_name}}/data/checks/: __init__.py
src/dsider/templates/copier/base/{{project_name}}/src/{{project_name}}/pipelines/: __init__.py
