[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "dsider"
version = "0.1.0"
authors = [
  { name="Galen Seilis" },
]
description = "Data science project templating and management."
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/galenseilis/dsider"
Issues = "https://github.com/galenseilis/dsider/issues"
